--- a/assets/css/wpl.css
+++ b/assets/css/wpl.css
@@ -41,7 +41,6 @@
     width: 100%; }
   .wpl-center-page .wpl-center-page-image-wrapper .wpl-center-page-image-title {
     position: absolute;
-    bottom: 0;
     left: 0;
     right: 0;
     text-align: center;
@@ -49,10 +48,10 @@
     font-size: 2rem;
     top: 50%;
     transform: translateY(-50%); }
-.wpl-center-page .wpl-center-page-image-button-wrapper {
-  margin-top: 4em; }
-  .wpl-center-page .wpl-center-page-image-button-wrapper img {
-    width: 100%; }
+.wpl-center-page .wpl-center-page-container {
+  padding: 2rem 0; }
+.wpl-center-page .wpl-center-page-image-button-wrapper img {
+  width: 100%; }
 
 .wpl-benefits {
   padding: 4rem 0; }
@@ -333,12 +332,8 @@
 
 @media only screen and (min-width: 1280px) {
   .wpl-center-page .wpl-center-page-image-wrapper .wpl-center-page-image-title {
-    margin-bottom: 280px;
     font-size: 2.4rem; } }
 @media only screen and (max-width: 991px) {
-  .wpl-center-page .wpl-center-page-image-wrapper .wpl-center-page-image-title {
-    margin-bottom: 180px; }
-
   .wpl-benefits ul.benefit-lists {
     display: block; }
     .wpl-benefits ul.benefit-lists li.benefit-item::before {
@@ -364,7 +359,6 @@
     font-size: 1rem; } }
 @media only screen and (min-width: 468px) and (max-width: 768px) {
   .wpl-center-page .wpl-center-page-image-wrapper .wpl-center-page-image-title {
-    margin-bottom: 95px;
     font-size: 1.3rem; } }
 @media only screen and (min-width: 0px) and (max-width: 467px) {
   .wpl-footer .wpl-form .wpcf7-submit + .ajax-loader {
@@ -378,7 +372,6 @@
     line-height: 1.5rem; }
 
   .wpl-center-page .wpl-center-page-image-wrapper .wpl-center-page-image-title {
-    margin-bottom: 45px;
     font-size: 1rem; } }
 
 /*# sourceMappingURL=wpl.css.map */
