Add: wp classes scss Add: breakpoint mixin

--- a/assets/css/wpl.css
+++ b/assets/css/wpl.css
@@ -1,18 +1,101 @@
 /** Text meant only for screen readers */
+.alignnone {
+  margin-left: 0;
+  margin-right: 0;
+  max-width: 100%;
+  height: auto; }
+
+.aligncenter {
+  display: block;
+  margin: 0.5rem auto;
+  height: auto; }
+
+.alignleft,
+.alignright {
+  margin-bottom: 0.5rem;
+  height: auto; }
+
+@media (max-width: 991.98px) {
+  .alignleft {
+    max-width: 100%;
+    width: calc(100% - 50px); }
+
+  .alignright {
+    max-width: 100%;
+    width: calc(100% - 50px); } }
+@media (min-width: 768px) {
+  .alignleft {
+    float: left;
+    margin-right: 0.5rem; }
+
+  .alignright {
+    float: right;
+    margin-left: 0.5rem; } }
+.wp-caption {
+  display: inline-block; }
+
+.wp-caption img {
+  margin-bottom: 0.5rem;
+  line-height: 1;
+  max-width: 100%;
+  height: auto; }
+
+.wp-caption-text {
+  font-size: 0.8rem;
+  color: #909090; }
+
+.screen-reader-text {
+  clip: rect(1px, 1px, 1px, 1px);
+  height: 1px;
+  margin: 0;
+  overflow: hidden;
+  padding: 0;
+  position: absolute !important;
+  width: 1px; }
+  .screen-reader-text:focus {
+    background-color: #252525;
+    border-radius: 3px;
+    box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.6);
+    clip: auto !important;
+    color: #21759b;
+    display: block;
+    font-size: 0.875rem;
+    font-weight: bold;
+    height: auto;
+    left: 5px;
+    line-height: normal;
+    padding: 15px 23px 14px;
+    text-decoration: none;
+    top: 5px;
+    width: auto;
+    z-index: 100000; }
+
+hr,
+.wp-block-separator {
+  margin: 2em auto;
+  max-width: 300px;
+  width: 100%; }
+
+p.has-drop-cap:not(:focus)::first-letter {
+  font-family: 'Baskerville', Arial, Helvetica, sans-serif;
+  font-size: 5.5rem;
+  font-weight: 400;
+  color: #be9359; }
+
 .wpl-service {
   padding: 2rem 0; }
   .wpl-service .wpl-service-header p, .wpl-service .wpl-service-header li {
     margin-bottom: 0.5em; }
   .wpl-service .wpl-service-header h1 {
-    font-size: 4.5rem;
+    font-size: 4rem;
     line-height: 4rem;
     margin: 0.5em 0; }
   .wpl-service .wpl-service-header h2 {
-    font-size: 3.4rem;
+    font-size: 3rem;
     line-height: 3rem;
     margin: 0.5em 0; }
   .wpl-service .wpl-service-header h3 {
-    font-size: 3rem;
+    font-size: 2.5rem;
     line-height: 2.5rem;
     margin: 0.5em 0; }
   .wpl-service .wpl-service-header h4 {
@@ -41,6 +124,7 @@
     width: 100%; }
   .wpl-center-page .wpl-center-page-image-wrapper .wpl-center-page-image-title {
     position: absolute;
+    padding: 0 1rem;
     left: 0;
     right: 0;
     text-align: center;
@@ -77,7 +161,7 @@
       padding-left: 4rem;
       padding-right: 2rem; }
       .wpl-benefits ul.benefit-lists li.benefit-item::before {
-        background-color: #909090;
+        background-color: #be9359;
         content: "." counter(benefit-counter);
         color: #fff;
         font-weight: bold;
@@ -125,12 +209,12 @@
     padding-top: 1rem; }
     .wpl-testimonials #testimonials-list .owl-item .testimonial-card .testimonial-item-text {
       padding-top: 2rem;
-      width: 620px;
+      width: 620px !important;
       position: relative;
-      left: 50%;
+      left: 50% !important;
       text-align: center;
       visibility: hidden;
-      margin: 0 -310px;
+      margin: 0 -310px !important;
       opacity: 0;
       transition: all 300ms ease 0s;
       -webkit-transition: all 300ms ease-in-out;
@@ -252,7 +336,8 @@
     height: 44px;
     border-radius: 1em;
     border: 0;
-    padding: 0.6rem; }
+    padding: 0.6rem;
+    color: #909090; }
   .wpl-footer .wpl-form textarea {
     min-height: 180px; }
   .wpl-footer .wpcf7 .screen-reader-response {
@@ -330,16 +415,19 @@
       margin-left: 5px;
       vertical-align: text-top; }
 
-@media only screen and (min-width: 1280px) {
+@media (min-width: 1200px) {
   .wpl-center-page .wpl-center-page-image-wrapper .wpl-center-page-image-title {
     font-size: 2.4rem; } }
-@media only screen and (max-width: 991px) {
+@media (max-width: 1199.98px) {
+  .wpl-hero {
+    min-height: 100%; }
+
   .wpl-benefits ul.benefit-lists {
     display: block; }
     .wpl-benefits ul.benefit-lists li.benefit-item::before {
       top: 0;
       font-size: 1.1rem; } }
-@media only screen and (max-width: 768px) {
+@media (min-width: 768px) {
   .wpl-doc-wrapper .wpl-hero-container .wpl-hero-text {
     padding: 2rem 0; }
   .wpl-doc-wrapper .wpl-hero-container .wpl-hero-text h2 {
@@ -357,10 +445,10 @@
 
   .wpl-footer .wpl-footer-title {
     font-size: 1rem; } }
-@media only screen and (min-width: 468px) and (max-width: 768px) {
+@media (min-width: 576px) and (max-width: 991.98px) {
   .wpl-center-page .wpl-center-page-image-wrapper .wpl-center-page-image-title {
     font-size: 1.3rem; } }
-@media only screen and (min-width: 0px) and (max-width: 467px) {
+@media (max-width: 767.98px) {
   .wpl-footer .wpl-form .wpcf7-submit + .ajax-loader {
     position: relative;
     right: 0;
