--- a/assets/css/wpl.css
+++ b/assets/css/wpl.css
@@ -80,7 +80,7 @@ p.has-drop-cap:not(:focus)::first-letter {
   font-family: 'Baskerville', Arial, Helvetica, sans-serif;
   font-size: 5.5rem;
   font-weight: 400;
-  color: #be9359; }
+  color: #dfab40; }
 
 .wpl-service {
   padding: 2rem 0; }
@@ -113,7 +113,7 @@ p.has-drop-cap:not(:focus)::first-letter {
     .wpl-service .service-lists .service-card .service-text {
       text-align: center; }
     .wpl-service .service-lists .service-card .service-title * {
-      color: #be9359;
+      color: #dfab40;
       font-size: 1.5rem;
       line-height: 1.5rem;
       margin-bottom: 0.5em; }
@@ -161,7 +161,7 @@ p.has-drop-cap:not(:focus)::first-letter {
       padding-left: 4rem;
       padding-right: 2rem; }
       .wpl-benefits ul.benefit-lists li.benefit-item::before {
-        background-color: #be9359;
+        background-color: #dfab40;
         content: "." counter(benefit-counter);
         color: #fff;
         font-weight: bold;
@@ -220,7 +220,7 @@ p.has-drop-cap:not(:focus)::first-letter {
       -webkit-transition: all 300ms ease-in-out;
       -moz-transition: all 300ms ease-in-out; }
     .wpl-testimonials #testimonials-list .owl-item .testimonial-card cite {
-      color: #be9359; }
+      color: #dfab40; }
     .wpl-testimonials #testimonials-list .owl-item .testimonials-avatar {
       padding: 4px;
       width: 100px;
@@ -244,7 +244,7 @@ p.has-drop-cap:not(:focus)::first-letter {
       -moz-transform: scale(1.4); }
     .wpl-testimonials #testimonials-list .owl-item.center img {
       padding: 4px;
-      background: #be9359; }
+      background: #dfab40; }
     .wpl-testimonials #testimonials-list .owl-item.center .testimonial-card .testimonial-item-text {
       visibility: visible;
       opacity: 1; }
@@ -262,7 +262,7 @@ p.has-drop-cap:not(:focus)::first-letter {
         margin: 0 auto;
         border-left: 10px solid transparent;
         border-right: 10px solid transparent;
-        border-top: 10px solid #be9359;
+        border-top: 10px solid #dfab40;
         border-bottom: 10px solid transparent; }
   .wpl-testimonials .wpl-testimonials-list-wrapper {
     max-width: 768px;
@@ -416,7 +416,7 @@ p.has-drop-cap:not(:focus)::first-letter {
     -webkit-transition: all 300ms ease-in-out;
     -moz-transition: all 300ms ease-in-out; }
     #wpl_edit_landing a.wpl-edit-landing-link:hover {
-      background: #be9359;
+      background: #dfab40;
       text-decoration: none;
       transition: all 300ms ease-in-out;
       -webkit-transition: all 300ms ease-in-out;
