--- a/assets/sass/_variable.scss
+++ b/assets/sass/_variable.scss
@@ -1,5 +1,5 @@
 // Variable
-$primary-color: #be9359 !default;
+$primary-color: #dfab40 !default;
 $white-color: #fff;
 $gray-color: #909090;
 $light-gray-color: #d4d4d4;
