--- a/assets/css/atd.css
+++ b/assets/css/atd.css
@@ -1,7 +1,8 @@
 html, body {
   line-height: 1.2;
   font-size: 1rem;
-  font-family: "Open Sans", Arial, sans-serif; }
+  font-family: "Open Sans", Arial, sans-serif;
+  margin: 0; }
 
 h1, h2, h3, h4, h5, h6 {
   font-family: "Libre Baskerville", Arial, serif; }
@@ -9,6 +10,12 @@ h1, h2, h3, h4, h5, h6 {
 p, li {
   color: #909090;
   line-height: 1.6rem; }
+
+a {
+  text-decoration: none;
+  transition: all 300ms ease-in-out;
+  -webkit-transition: all 300ms ease-in-out;
+  -moz-transition: all 300ms ease-in-out; }
 
 hr {
   height: 3px;
