--- a/assets/sass/_atd.scss
+++ b/assets/sass/_atd.scss
@@ -5,6 +5,7 @@ html, body {
   line-height: 1.2;
   font-size: 1rem;
   font-family: "Open Sans", Arial, sans-serif;
+  margin: 0;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -14,6 +15,13 @@ h1, h2, h3, h4, h5, h6 {
 p, li {
   color: $gray-color;
   line-height: 1.6rem;
+}
+
+a {
+  text-decoration: none;
+  transition: all 300ms ease-in-out;
+  -webkit-transition: all 300ms ease-in-out;
+  -moz-transition: all 300ms ease-in-out;
 }
 
 hr {
