--- a/assets/sass/_wpl.scss
+++ b/assets/sass/_wpl.scss
@@ -1,3 +1,9 @@
+// Bootstrap component
+@import "../../vendor/twbs/bootstrap/scss/functions";
+@import "../../vendor/twbs/bootstrap/scss/variables";
+@import "../../vendor/twbs/bootstrap/scss/mixins";
+@import "../../vendor/twbs/bootstrap/scss/bootstrap-grid";
+@import "../../vendor/twbs/bootstrap/scss/buttons";
 // WPL main style
 @import "variable";
 @import "mixin";
@@ -334,6 +340,7 @@
   input,
   select,
   textarea {
+    font-family: "Open Sans", Arial, sans-serif;
     color: $gray-color;
   }
 
@@ -361,6 +368,7 @@
       max-width: 300px;
       background-color: $dark-gray-color;
       color: $white-color;
+      font-size: 1rem !important;
       transition: all 300ms ease-in-out;
       -webkit-transition: all 300ms ease-in-out;
       -moz-transition: all 300ms ease-in-out;
@@ -400,6 +408,8 @@
     input,
     select,
     textarea {
+      font-family: "Open Sans", Arial, sans-serif;
+      font-size: 1rem;
       width: 100%;
       margin-bottom: 1em;
       height: 44px;
