--- a/assets/css/wpl.css
+++ b/assets/css/wpl.css
@@ -3736,12 +3736,12 @@ p.has-drop-cap:not(:focus)::first-letter {
     padding-top: 1rem; }
     .wpl-testimonials #testimonials-list .owl-item .testimonial-card .testimonial-item-text {
       padding-top: 2rem;
-      width: 620px !important;
+      width: 100%;
       position: relative;
-      left: 50% !important;
+      left: auto;
       text-align: center;
       visibility: hidden;
-      margin: 0 -310px !important;
+      margin: 0 auto;
       opacity: 0;
       transition: all 300ms ease-in-out;
       -webkit-transition: all 300ms ease-in-out;
@@ -3815,7 +3815,7 @@ p.has-drop-cap:not(:focus)::first-letter {
 .wpl-footer {
   min-height: 250px; }
   .wpl-footer .wpl-footer-container {
-    padding: 2rem 0 4rem 0; }
+    padding: 2rem 15px 4rem 15px; }
   .wpl-footer input,
   .wpl-footer select,
   .wpl-footer textarea {
@@ -3973,6 +3973,11 @@ p.has-drop-cap:not(:focus)::first-letter {
       top: 0;
       font-size: 1.1rem; } }
 @media (min-width: 768px) {
+  .wpl-testimonials #testimonials-list .owl-item .testimonial-card .testimonial-item-text {
+    width: 620px !important;
+    left: 50% !important;
+    margin: 0 -310px !important; }
+
   .wpl-doc-wrapper .wpl-hero-container .wpl-hero-text {
     padding: 2rem 0; }
   .wpl-doc-wrapper .wpl-hero-container .wpl-hero-text h2 {
@@ -3982,11 +3987,6 @@ p.has-drop-cap:not(:focus)::first-letter {
   .wpl-benefits .wpl-benefits-header h2 {
     font-size: 1.9rem;
     line-height: 1.9rem; }
-
-  .wpl-testimonials #testimonials-list .owl-item.center .testimonial-item-text {
-    width: auto;
-    left: auto;
-    margin: 0 auto; }
 
   .wpl-footer .wpl-footer-title {
     font-size: 1rem; } }
