--- a/assets/sass/_wpl.scss
+++ b/assets/sass/_wpl.scss
@@ -213,12 +213,12 @@
       .testimonial-card {
         .testimonial-item-text {
           padding-top: 2rem;
-          width: 620px !important;
+          width: 100%;
           position: relative;
-          left: 50% !important;
+          left: auto;
           text-align: center;
           visibility: hidden;
-          margin: 0 -310px !important;
+          margin: 0 auto;
           opacity: 0;
           transition: all 300ms ease-in-out;
           -webkit-transition: all 300ms ease-in-out;
@@ -334,7 +334,7 @@
   min-height: 250px;
 
   .wpl-footer-container {
-    padding: 2rem 0 4rem 0;
+    padding: 2rem 15px 4rem 15px;
   }
 
   input,
@@ -536,6 +536,12 @@
 }
 
 @include media-breakpoint-up(md) {
+  .wpl-testimonials #testimonials-list .owl-item .testimonial-card .testimonial-item-text {
+    width: 620px !important;
+    left: 50% !important;
+    margin: 0 -310px !important;
+  }
+
   .wpl-doc-wrapper .wpl-hero-container {
     .wpl-hero-text {
       padding: 2rem 0;
@@ -550,12 +556,6 @@
   .wpl-benefits .wpl-benefits-header h2 {
     font-size: 1.9rem;
     line-height: 1.9rem;
-  }
-
-  .wpl-testimonials #testimonials-list .owl-item.center .testimonial-item-text {
-    width: auto;
-    left: auto;
-    margin: 0 auto;
   }
 
   .wpl-footer .wpl-footer-title {
