--- a/assets/sass/_atd.scss
+++ b/assets/sass/_atd.scss
@@ -4,12 +4,12 @@
 html, body {
   line-height: 1.2;
   font-size: 1rem;
-  font-family: "Open Sans", Arial, sans-serif;
+  font-family: "Open Sans", Arial, Helvetica, sans-serif;
   margin: 0;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Libre Baskerville", Arial, serif;
+  font-family: "Libre Baskerville", Arial, Helvetica, sans-serif;
 }
 
 p, li {
