--- a/assets/sass/_wp-classes.scss
+++ b/assets/sass/_wp-classes.scss
@@ -75,7 +75,7 @@ hr,
 }
 
 p.has-drop-cap:not(:focus)::first-letter {
-  font-family: 'Baskerville', Arial, Helvetica, sans-serif;
+  font-family: 'Libre Baskerville', Arial, Helvetica, sans-serif;
   font-size: 5.5rem;
   font-weight: 400;
   color: $primary-color;
