Fix: rename Above the fold scss/css file "atd" to "atf"

--- a/assets/css/atf.css
+++ b/assets/css/atf.css
@@ -71,4 +71,4 @@ hr {
     font-size: 1.6rem;
     line-height: 1.6rem; }
 
-/*# sourceMappingURL=atd.css.map */
+/*# sourceMappingURL=atf.css.map */
